# mx-deprecated-sdk-py-wallet

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
accounts/: accounts.py  pyproject.toml  setup.py
accounts/erdpy_accounts/: __init__.py
erdpy_accounts/: __init__.py  _setup  account.py  accounts.py  address.py
erdpy_network/: core.py
multiversx_sdk_wallet/: __init__.py
network/: pyproject.toml
network/erdpy_network/: __init__.py  core.py  errors.py
wallet/: README.md  pyproject.toml  requirements.txt
wallet/erdpy_wallet/: facade.py  hd.py  keyfile.py
