[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "erdpy_wallet"
version = "0.1.0"
authors = [
  { name="Elrond Network" },
]
description = "erdpy_wallet"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pynacl==1.5.0"
]

[project.urls]
"Homepage" = "https://github.com/ElrondNetwork/elrond-sdk-erdpy-eggs"
